Fix social icon alignment

--- a/assets/index.css
+++ b/assets/index.css
@@ -105,7 +105,7 @@ header {
 }
 
 .custom-main-header .social-icons ul li {
-    padding: 0 5px 0 0;
+    padding: 0 11px 0 0;
     margin: 5px 0;
     list-style: none;
     display: inline-block;
